app/css/touch.styl
@require 'common';

$max-width = 414px;
$max-height = 659px;

$mobile-view() {
  max-width: $max-width;

  * {
    -webkit-touch-callout: none;
    -webkit-text-size-adjust: none;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  $hidePowered();

  #header,
  #footer,
  .button,
  #emi-inner {
    border-radius: 0;
  }

  &::after {
    content: none;
  }

  .shake {
    animation: none;
  }

  #body {
    height: $bodyhmobile;
    min-height: $bodyhmobile;
    &.emi-focus {
      #footer {
        position: fixed;
      }
    }
  }

  #overlay,
  #error-message {
    bottom: 0;
  }

  #content {
    height: 100%;
  }

  #emi-wrap {
    width: 100%;
    left: 0;
    margin-left: 0;
    position: absolute;
    bottom: 0;
    height: auto;
    top: auto;
    transform: translateY(15px);

    &::after {
      height: auto;
    }

    .col {
      white-space: normal;
    }

    .em {
      font-size: 14px;
      margin-left: 10px;
    }
  }

  #backdrop {
    display: none;
  }

  #modal {
    background: #fff;
    width: 100%;
    max-width: $max-width;
    min-height: 100%;
    margin: 0 auto;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    transform: translateY(7%);
    overflow: hidden;
  }

  #wallets {
    padding-bottom: $footerh + 12px;
  }

  &.drishy #modal {
    transition: 0.3s ease-out all;
  }

  #payment-options {
    border-bottom: 1px solid $bc;
  }

  .item-inner {
    transform: none;
    opacity: 0;
  }

  .tab-content.drishy .item-inner {
    opacity: 1;
  }

  #footer {
    bottom: 0;
    z-index: 10;
    transform: translateY(100%);
  }

  #container.one-method {
    .recurring-message {
      position: fixed;
      bottom: 72px;
    }
  }

  #container.extra {
    #next-button {
      transform: translateY(-100%);
    }
  }

  #card-offer {
    position: fixed;
    bottom: 70px;
  }

  .close {
    font-size: 28px;
    line-height: 28px;
    padding: 6px 12px 12px;
  }
}

@media (max-device-height: 450px), (max-device-width: 450px) {
  $mobile-view();
}

.mobile {
  $mobile-view();
}

.noanim {
  * {
    transition: none !important;
  }
}

@media (max-height: 767px) {
  $hidePowered();
}

@media (max-device-height: 568px) {
  .ip {
    #body {
      height: 310px;
      min-height: 310px;
    }
  }
  .grid label {
    height: 73px;
  }
}

.android4 {
  .elem {
    height: 54px;
  }
  .input {
    padding: 12px 0;
    top: 16px;
  }
}

